--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <div class="image">
           <div class="imagestyle">
             <img src="https://i.postimg.cc/fbdvJYsn/40.png" alt="Welcome to ODISHA" />
-            <!-- /images/40.png -->
             <div class="overlay">
               <p>
                 "Where Nature Paints its Beauty: Welcome to Odisha, the Land of
@@ -826,7 +825,7 @@
           <p class="title">Odisha State Museum</p>
           <br />
           <div class="imagestyle">
-            <img src="./images/75.avif" alt="Wonder World Waterpark" />
+            <img src="https://i.postimg.cc/zXtWnYpT/84.png" alt="Wonder World Waterpark" />
             <div class="overlay">
               <p>
                 Wonder World Waterpark in Odisha offers a thrilling aquatic adventure for all ages, featuring thrilling water slides, wave pools, and water-based attractions. The park's vibrant ambiance and well-maintained facilities ensure a memorable experience. With designated areas for children and amenities like changing rooms, lockers, and food stalls, it's a popular destination for families, friends, and adventure seekers seeking a refreshing escape from the heat.<br />
